--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@
 # Minimum CMake version required
 cmake_minimum_required(VERSION 3.10)
 
-project(Conway)
+project(conway)
 
 # Use C++11 (required by Catch2 library)
 set(CMAKE_CXX_STANDARD 11)
@@ -19,6 +19,12 @@ target_include_directories(Conway PUBLIC
   inc
 )
 
+# Copy world files
+add_custom_command(TARGET Conway POST_BUILD
+                   COMMAND ${CMAKE_COMMAND} -E copy_directory
+                   ${CMAKE_SOURCE_DIR}/worlds/
+                   $<TARGET_FILE_DIR:Conway>)
+
 # Catch2 Unit Tests
 find_package(Catch2 REQUIRED)
 add_executable(Tests
@@ -33,3 +39,9 @@ target_link_libraries(Tests Catch2::Catch2)
 include(CTest)
 include(Catch)
 catch_discover_tests(Tests)
+
+# Copy test worlds to the output directory
+add_custom_command(TARGET Tests POST_BUILD
+                   COMMAND ${CMAKE_COMMAND} -E copy_directory
+                   ${CMAKE_SOURCE_DIR}/tests/test_worlds/
+                   $<TARGET_FILE_DIR:Tests>)
